Fixed padding (text was hidden behind footer.)

--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,9 @@ h1{
 h2{
     padding-top: 20px;
 }
-p{
+.container{
     padding-top: 20px;
+    padding-bottom: 80px;
 }
 .navbar-brand img{
     width: 50px;
@@ -62,6 +63,9 @@ a:hover{
 .accordion-button:not(.collapsed){
     color: #041E42;
     background-color: #FFC72C;
+}
+.col-8{
+    padding-bottom: 80px;
 }
 @media screen and (min-width:992px) {
     .navbar-brand img{
